# synchronizer

./: CMakeLists.txt  README.md  package.xml
demos/: demo_follower.cpp  demo_follower.py  demo_leader.cpp  demo_leader.py  demo_master.cpp  demo_master.py  demo_slave.cpp  demo_slave.py
include/synchronizer/: follower.hpp  leader.hpp  master.hpp  slave.hpp
include/synchronizer/private/: follower_sync.hpp  leader_sync.hpp  master_sync.hpp  slave_sync.hpp
src/: follower.cpp  follower_sync.cpp  leader.cpp  leader_sync.cpp  master.cpp  master_sync.cpp  slave.cpp  slave_sync.cpp
srcpy/: wrappers.cpp
tests/: unit_tests_synchronizer.cpp
