<?xml version="1.0"?>

<package>

  <name>synchronizer</name>
  <version>1.0.0</version>
  <description>API for synchronizing two processes via a shared memory</description>
  <license>BSD 3-Clause</license>
  <author email="vberenz@tuebingen.mpg.de">Vincent Berenz</author>
  <maintainer email="vberenz@tuebingen.mpg.de">Vincent Berenz</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- This provide cmake macros to help building the project. -->
  <build_depend> mpi_cmake_modules </build_depend>
  <run_depend>   mpi_cmake_modules </run_depend>

  <build_depend> shared_memory </build_depend>
  <run_depend> shared_memory </run_depend>

  <build_depend> real_time_tools </build_depend>
  <run_depend> real_time_tools </run_depend>
  
  <build_depend> pybind11_catkin </build_depend>

  
  <export>
  </export>

</package>
